--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,10 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - KafkaCalculator - Site developed by <a href="https://www.linkedin.com/in/alexander-borovtsov-5a365114a/">Alexander Borovtsov</a>
+            &copy; 2021 - KafkaCalculator - 
+            <a href="https://www.linkedin.com/in/alexander-borovtsov-5a365114a/">Alexander Borovtsov</a> - 
+            <a href="https://github.com/ABorovtsov/KafkaCalculator">GitHub</a> - 
+            <img alt="GitHub Release Date" src="https://img.shields.io/github/release-date/aborovtsov/kafkacalculator?style=flat-square">
         </div>
     </footer>
 
