--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -20,7 +20,7 @@
     }
     else
     {
-        <h2>Calculate the number partitions</h2>
+        <h2>Calculate The Number Of Partitions</h2>
         <hr />
         <partial name="shared/_kafkaparametersEdit" model="Model.KafkaParameters" />
     }
